--- a/style.css
+++ b/style.css
@@ -1,1 +1,143 @@
 /** Write your css styles below this comment */
+body{
+    padding: 0;
+    margin:0;
+    font-family: Arial, Helvetica;
+}
+.container{
+    min-height: 100vh;
+    background-image:linear-gradient(0deg, rgba(4, 30, 51, 0.705), rgb(2, 34, 41)), url('/LOCK.jpg');
+    background-size:cover;
+    background-position:center
+}
+.header{
+    display: flex;
+    justify-content: start;
+    padding: 12px;
+}
+
+.header img{
+    margin: 0 12px;
+}
+.header span{
+    color: rgb(202, 198, 198);
+    font-weight: 700;
+    padding: 12px;
+}
+
+.content{
+    width: 100%;
+    display: block;
+    margin:20px auto;
+}
+
+.boxes{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.box{
+    background-color: rgb(202, 198, 198);
+    margin: 0 10px;
+    border-radius: 10px;
+    padding: 10px;
+    height: 500px;
+    width:100%;
+    overflow-y: auto;
+    animation: slidein 1s ease-in-out 5s;
+  -webkit-animation: slidein 5s;
+  -moz-animation: slidein 5s;
+  -o-animation: slidein 5s;
+  -ms-animation: slidein 5s;
+}
+
+@keyframes slidein {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-moz-keyframes slidein {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-webkit-keyframes slidein {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-o-keyframes slidein {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-ms-keyframes slidein {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+.box::-webkit-scrollbar {
+    width: 1em;
+  }
+.box::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+.box::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+  }
+
+.box h3{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.box p{
+    font-size: 20px;
+    word-wrap: break-word;
+    letter-spacing: 0.1rem;
+    display: block;
+    max-height: 150px;
+    overflow-y:auto;
+}
+
+.feedback-text,.sum{
+    font-weight: 700;
+    font-style: italic;
+}
+
+.box button{
+    background-color: #e74c3c;
+    padding: 5px;
+    text-decoration: none;
+    font-size: 16px;
+    color: rgb(236, 236, 236);
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    border: none;
+}
+.box .input-group{
+    display: block;
+    /* background-color: #e74c3c; */
+}
+.box .input-group label{
+    width: 100%;
+}
+.box .input-group input{
+    width: 90%;
+    padding: 10px;
+    margin: 10px auto;
+    outline: none;
+    border-radius: 5px;
+    border: none;
+}
+.addArrayform{
+    display: none;
+}
+.elements{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(10px, auto);
+}
